--- a/rgee-portfolio/src/Styles/Projects.module.css
+++ b/rgee-portfolio/src/Styles/Projects.module.css
@@ -20,6 +20,8 @@
   flex-direction: column;
   justify-content: space-evenly;
   align-items: flex-start;
+  width: auto;
+  margin: auto;
 }
 
 .typewriter h1 {
@@ -44,8 +46,8 @@
 }
 
 .typewriter p {
-  font-size: 1.3rem;
-  line-height: 2rem;
+  font-size: 1rem;
+  line-height: 1rem;
   overflow: hidden;
   border-right: 0.15rem solid rgb(255, 0, 0);
   white-space: nowrap;
@@ -122,7 +124,7 @@ hr {
     width: 80%;
 }
 
-@media (max-width: 1800px) {
+@media (max-width: 1200px) {
   .actualprojects {
     width: auto;
     margin-bottom: 260px;
