--- a/rgee-portfolio/src/Styles/Home.module.css
+++ b/rgee-portfolio/src/Styles/Home.module.css
@@ -316,13 +316,13 @@ button {
   }
 
   .about {
-    margin: 20px 10px;
+    margin: 50px;
   }
 
   .aboutme {
     font-size: 1rem;
     line-height: 1rem;
-    margin-bottom: 200px;
+    margin-bottom: 50px;
   }
 
   .skills {
